# student-assessment

./: README.md  pyproject.toml
backend/: .env.example  mailer.py  main.py  map.json  pdf_renderer.py  pipeline.py  radar.json
backend/app/api/controller/: router.py
backend/app/api/controller/admin/: __init__.py  route.py  schema.py
backend/app/api/controller/mailer/: __init__.py  route.py  schema.py
backend/app/api/controller/reports/: __init__.py  route.py  schema.py
backend/app/services/admin/: services.py
backend/app/services/mailer/: services.py
frontend/: admin.html  app.js  dashboard.html  email_template.html  index.html  serve_frontend.py  style.css
